--- a/news-category.html
+++ b/news-category.html
@@ -70,7 +70,7 @@
 
     <main>
         <section class="news mt-5">
-            <div class="container">
+            <div class="container mt-4">
                 <div class="section-title">
                     <h2>آخر الاخبار</h2>
                 </div>
